# Ecommerce-ETL-Pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Ecommerce-ETL-Pipeline/: pyproject.toml
Ecommerce-ETL-Pipeline/data/: customers.json  orders.json  products.json  transactions.json
config/: database_config.py  spark_config.py
dags/: ecommerce_etl_dag.py
data/: products.json  transactions.json
src/: data_cleaning.py  data_ingestion.py  data_loader.py  etl_pipeline.py  transformations.py
